fixing spacing issues

--- a/details.css
+++ b/details.css
@@ -74,7 +74,6 @@ a {
         overflow: visible;
     }
     .container {
-        border: hidden;
         text-align: center;
     }
     .name {
